--- a/css/adaptation.css
+++ b/css/adaptation.css
@@ -1,13 +1,35 @@
-@media screen and (max-width:412px){
-	.logo {
-		width: 200px;
-height: 200px;
-padding-top: 75px;
-display: flex;
-justify-content: center;
+@media screen and (max-width:412px)
+{
+
+body {
+	margin: 0px;
 }
+
+.logo {
+	width: 200px;
+	height: 200px;
+	padding-top: 75px;
+	display: flex;
+	justify-content: center;
+	}
+
 .img {
-	width: 500px;
-	height: 200px;	}
+	width: 400px;
+	height: 250px;
+}
+
+.footer {
+  
+  font-weight: bold;
+  background-color:#333;
+  color: #ccc;
+  padding: 30px;
+  margin-top:150px;
+  font-size: 10px;
+}
+#footer{
+	display:none;
+}
 
 }
+	
